Changed the Unit Struct to a class.

--- a/RReplay/View/DeckView.xaml
+++ b/RReplay/View/DeckView.xaml
@@ -4,21 +4,22 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:ignore="http://www.galasoft.ch/ignore"
+        xmlns:m="clr-namespace:RReplay.Model"
         xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
         mc:Ignorable="d ignore"
         DataContext="{Binding Deck, Source={StaticResource Locator}}">
     <Window.Resources>
-        <DataTemplate x:Key="OneTransportUnitTemplate">
+        <DataTemplate DataType="{x:Type m:OneTransportUnit}">
             <StackPanel Orientation="Horizontal">
-                <Label>Veterancy: </Label>
+                <Label>Veterancy:</Label>
                 <TextBlock Text="{Binding Veterancy}"/>
                 <Label>UnitID:</Label>
                 <TextBlock Text="{Binding UnitID}"/>
                 <Label>TransportID:</Label>
-                <TextBlock Text="{Binding TransportID}"/>                         
+                <TextBlock Text="{Binding TransportID}"/>
             </StackPanel>
         </DataTemplate>
-        <DataTemplate x:Key="TwoTransportUnitTemplate">
+        <DataTemplate DataType="{x:Type m:TwoTransportUnit}">
             <StackPanel Orientation="Horizontal">
                 <Label>Veterancy:</Label>
                 <TextBlock Text="{Binding Veterancy}"/>
@@ -30,7 +31,7 @@
                 <TextBlock Text="{Binding LandingCraftID}"/>
             </StackPanel>
         </DataTemplate>
-        <DataTemplate x:Key="UnitTemplate">
+        <DataTemplate DataType="{x:Type m:Unit}">
             <StackPanel Orientation="Horizontal">
                 <Label>Veterancy:</Label>
                 <TextBlock Text="{Binding Veterancy}"/>
@@ -46,8 +47,6 @@
         <TextBlock Text="{Binding Deck.Country, Mode=OneWay}" Margin="10,45.67,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <TextBlock Text="{Binding Deck.Specialization, Mode=OneWay}" Margin="190.902,45.67,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="15.96" Width="54.103"/>
         <TextBlock Text="{Binding Deck.Era, Mode=OneWay}" Margin="250.005,45.67,0,0" VerticalAlignment="Top" Height="13.344" HorizontalAlignment="Left" Width="71.108"/>
-        <ListBox x:Name="twoTransportsListBox" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True"  ItemTemplate="{DynamicResource TwoTransportUnitTemplate}" ItemsSource="{Binding TwoTransportsCollection}" Margin="10,66.63,10,0" Height="131.811" VerticalAlignment="Top" />
-        <ListBox x:Name="oneTransportsListBox" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True" ItemTemplate="{DynamicResource OneTransportUnitTemplate}" ItemsSource="{Binding OneTransportsCollection}" Margin="10,203.441,10,177.331"/>
-        <ListBox x:Name="unitsListBox"  dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True" Height="162.331" ItemTemplate="{DynamicResource UnitTemplate}" ItemsSource="{Binding UnitsCollection}" Margin="10,0,10,10" VerticalAlignment="Bottom"/>
+        <ListBox x:Name="unitsListBox" ItemsSource="{Binding UnitsCollection}" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True" Margin="10,67,10,10"/>
     </Grid>
 </Window>
