--- a/RReplay/View/DeckView.xaml
+++ b/RReplay/View/DeckView.xaml
@@ -18,29 +18,33 @@
 
         <DataTemplate DataType="{x:Type m:OneTransportUnit}">
             <StackPanel Orientation="Horizontal">
-                <Image Source="{Binding ClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}"></Image>
-                <Label>Veterancy:</Label>
-                <TextBlock Text="{Binding Veterancy}"/>
-                <Label>UnitID:</Label>
-                <TextBlock Text="{Binding UnitID}"/>
+                <Image Source="{Binding ClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}" Width="110" Height="Auto"></Image>
                 <Label>Name:</Label>
                 <TextBlock Text="{Binding ClassNameDebug}"/>
+                <Label>Veterancy:</Label>
+                <TextBlock Text="{Binding Veterancy}"/>
+                <Label>Category:</Label>
+                <TextBlock Text="{Binding Category}"/>
+                <Label>UnitID:</Label>
+                <TextBlock Text="{Binding UnitID}"/>
                 <Label>TransportID:</Label>
                 <TextBlock Text="{Binding TransportID}"/>
                 <Label>Transport Name:</Label>
                 <TextBlock Text="{Binding TransportClassNameDebug}"/>
-                <Image Source="{Binding TransportClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}"></Image>
+                <Image Source="{Binding TransportClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}" Width="110" Height="Auto"></Image>
             </StackPanel>
         </DataTemplate>
         <DataTemplate DataType="{x:Type m:TwoTransportUnit}">
             <StackPanel Orientation="Horizontal">
-                <Image Source="{Binding ClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}"></Image>
-                <Label>Veterancy:</Label>
-                <TextBlock Text="{Binding Veterancy}"/>
-                <Label>UnitID:</Label>
-                <TextBlock Text="{Binding UnitID}"/>
+                <Image Source="{Binding ClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}" Width="110" Height="Auto"></Image>
                 <Label>Name:</Label>
                 <TextBlock Text="{Binding ClassNameDebug}"/>
+                <Label>Veterancy:</Label>
+                <TextBlock Text="{Binding Veterancy}"/>
+                <Label>Category:</Label>
+                <TextBlock Text="{Binding Category}"/>
+                <Label>UnitID:</Label>
+                <TextBlock Text="{Binding UnitID}"/>
                 <Label>TransportID:</Label>
                 <TextBlock Text="{Binding TransportID}"/>
                 <Label>Transport Name:</Label>
@@ -49,33 +53,58 @@
                 <TextBlock Text="{Binding LandingCraftID}"/>
                 <Label>Landing Craft Name:</Label>
                 <TextBlock Text="{Binding SecondTransportClassNameDebug}"/>
-                <Image Source="{Binding TransportClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}"></Image>
-                <Image Source="{Binding SecondTransportClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}"></Image>
+                <Image Source="{Binding TransportClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}" Width="110" Height="Auto"></Image>
+                <Image Source="{Binding SecondTransportClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}" Width="110" Height="Auto"></Image>
             </StackPanel>
         </DataTemplate>
         <DataTemplate DataType="{x:Type m:Unit}">
             <StackPanel Orientation="Horizontal">
-                <Image Source="{Binding ClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}"></Image>
+                <Image Source="{Binding ClassNameDebug, Converter={StaticResource ClassNameDebugToImageSource}}" Width="110" Height="Auto"></Image>
+                <Label>Name:</Label>
+                <TextBlock Text="{Binding ClassNameDebug}"/>
                 <Label>Veterancy:</Label>
                 <TextBlock Text="{Binding Veterancy}"/>
                 <Label>Category:</Label>
                 <TextBlock Text="{Binding Category}"/>
                 <Label>UnitID:</Label>
                 <TextBlock Text="{Binding UnitID}"/>
-                <Label>Name:</Label>
-                <TextBlock Text="{Binding ClassNameDebug}"/>
             </StackPanel>
         </DataTemplate>
     </Window.Resources>
 
     <Grid>
         <TextBlock Text="{Binding Deck.DeckCode, Mode=OneWay}" Margin="10,10,47,0" VerticalAlignment="Top" Height="31" FontSize="18.667"/>
-        <TextBlock Text="{Binding Deck.Coalition, Mode=OneWay}" Margin="99,46,0,0" VerticalAlignment="Top" HorizontalAlignment="Left"/>
-        <TextBlock Text="{Binding Deck.Country, Mode=OneWay}" Margin="10,45.67,0,0" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBlock Text="{Binding Deck.Specialization, Mode=OneWay}" Margin="190.902,45.67,0,0" HorizontalAlignment="Left" VerticalAlignment="Top" Height="15.96" Width="54.103"/>
-        <TextBlock Text="{Binding Deck.Era, Mode=OneWay}" Margin="250.005,45.67,0,0" VerticalAlignment="Top" Height="13.344" HorizontalAlignment="Left" Width="71.108"/>
+        <StackPanel Orientation="Horizontal"  Margin="10,41,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" Height="36" Width="660">
+            <TextBlock Text="{Binding Deck.Coalition, Mode=OneWay}" Width="90"/>
+            <TextBlock Text="{Binding Deck.Country, Mode=OneWay}" Width="66"/>
+            <Image Source="{Binding Deck.Country, Converter={StaticResource CountryCodeToImageSource}}" Width="67" Height="24" ToolTip="{Binding Deck.Country, Mode=OneWay}"></Image>
+            <TextBlock Text="{Binding Deck.Specialization, Mode=OneWay}" Height="15.96" Width="54.103"/>
+            <Image Source="{Binding Deck.Specialization, Converter={StaticResource SpecializationCodeToImageSource}}" Width="24" Height="24" Margin="2,0">
+                <Image.Style>
+                    <Style TargetType="{x:Type Image}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Deck.Specialization, Converter={StaticResource SpecializationCodeToImageSource}}" Value="{x:Null}">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Image.Style>
+            </Image>
+            <TextBlock Text="{Binding Deck.Era, Mode=OneWay}" Width="71.108"/>
+            <Image Source="{Binding Deck.Era, Converter={StaticResource EraCodeToImageSource}}" Width="24" Height="24" Margin="2,0" >
+                <Image.Style>
+                    <Style TargetType="{x:Type Image}">
+                        <Style.Triggers>
+                            <DataTrigger Binding="{Binding Deck.Era, Converter={StaticResource SpecializationCodeToImageSource}}" Value="{x:Null}">
+                                <Setter Property="Visibility" Value="Collapsed" />
+                            </DataTrigger>
+                        </Style.Triggers>
+                    </Style>
+                </Image.Style>
+            </Image>
+        </StackPanel>
 
-        <ListBox x:Name="unitsListBox" ItemsSource="{Binding UnitsCollection}" dd:DragDrop.DropHandler="{Binding DragAndDropCommand}" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True" Margin="10,67,10,10"/>
+        <ListBox x:Name="unitsListBox" ItemsSource="{Binding UnitsCollection}" dd:DragDrop.DropHandler="{Binding DragAndDropCommand}" dd:DragDrop.IsDragSource="True" dd:DragDrop.IsDropTarget="True" Margin="10,82,10,10"/>
         <Button x:Name="refresh" Content="Refresh" Command="{Binding RefreshCode}" HorizontalAlignment="Right" Margin="0,41,10,0" VerticalAlignment="Top" Width="75"/>
         <Button x:Name="copy" Margin="0,0,10,0" VerticalAlignment="Top" Height="32" HorizontalAlignment="Right" Width="32" ToolTip="Copy Deck" Command="{Binding Main.CopyDeckCodeCommand , Source={StaticResource Locator}}" CommandParameter="{Binding  Deck.DeckCode}" >
             <Image Source="/RReplay;component/Ressources/CopyToClipboard.ico" Stretch="UniformToFill"  />
